static/css/style.css
@import "sh_bright.min.css";
@import "sh_darkness.min.css" (prefers-color-scheme: dark);

body {
    font-size: 1.2em;
    font-family: 'Droid Sans', sans-serif;
    margin: 0px;
    padding: 0px;
}

table {
    margin: auto;
    border-collapse: collapse;
}

table, th, td {
    border-width: 1px;
    border-style: solid;
}

th, td {
    padding-left: 0.5em;
    padding-right: 0.5em;
    padding-top: 0.2em;
    padding-bottom: 0.2em;
}

#nav {
    border-bottom-style: solid;
    border-bottom-width: 2px;
    width: 100%;
    z-index: 2;
}

#content {
    width: 75%;
    margin-left: auto;
    margin-right: auto;
}

a.anchor {
    display: block;
    position: relative;
    visibility: hidden;
    top: -60px;
}

@media (min-height: 750px) {
    #nav {
        position: fixed;
        top: 0;
        left: 0;
    }

    #wrap {
        height: 5em;
    }

    a.anchor {
        top: -175px;
    }
}

pre {
    max-height: 300px;
    overflow: auto;
    font-size: 0.9em;
    padding: 10px;
    margin: 1em;
    border-width: 2px;
    border-style: solid;
    border-radius: 10px;
    resize: vertical;
}

/* allow resizing larger than max-height */
pre[style*="height"] {
    max-height: unset;
}

.ascii {
    font-size: 0.7em;
    line-height: 1;
    max-height: max-content;
    overflow-y: auto;
    font-weight: bold;
    width: max-content;
}

.textwrap {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
}

.listdesc {
    font-size: 0.75em;
    vertical-align: top;
}

.show-comments {
    background: none;
    border: none;
    font: inherit;
    cursor: pointer;
}

.releasecard {
    border-width: 2px;
    border-style: solid;
    width: max-content;
    max-width: 100%;
    padding: 0.6em 1em 0em 1em;
    border-radius: 10px;
    text-align: center;
    margin: auto;
}

#home {
    font-size: 2.5em;
    margin-right: 0.5em;
}

#nav ul {
    list-style-type: none;
}

#nav ul li {
    display: inline;
    margin-right: 0.5em;
}

a:link, a:visited {
    text-decoration: none;
}

a:link:hover, a:visited:hover, .show-comments:hover {
    text-decoration: underline;
}

#nav a:link, #nav a:visited {
    font-weight: bold;
}

#footer {
    text-align: center;
    margin-top: 1em;
    font-size: small;
}

#index-avatar {
    width: 150px;
    height: 150px;
    float: right;
    border-width: 2px;
    border-style: solid;
    border-radius: 10px;
    margin-left: 2em;
    margin-bottom: 1em;
}

div.fonts {
    display: inline;
    margin-top: 20px;
    margin-left: 23px;
}

span.font-big {
    font-size: 0.9em;
}

span.font-small {
    font-size: 0.6em;
}

.lightgallery {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap;
}

.border {
    overflow: hidden;
    height: max-content;
    display: inline-block;
    border-radius: 10px;
    vertical-align: middle;
    margin: 3px 0 3px 0;
    border-width: 2px;
    border-style: solid;
}

.border .pic {
    transition: transform 0.1s;
    vertical-align: bottom;
}

.border:hover .pic {
    transform: scale(1.1, 1.1);
    filter: brightness(75%);
    cursor: zoom-in;
}

/* colors */

body, #nav {
    background-color: #FFFFFF;
}

.show-comments {
    border-bottom-color: #0000CD;
}

a:link, .show-comments {
    color: #0000CD;
}

a:visited {
    color: #4B0082;
}

body, #nav, #nav a:link, #nav a:visited {
    color: #000000;
}

#nav {
    border-bottom-color: #32CD32;
}

hr {
    color: #32CD32;
}

table, th, td, pre, .border, .releasecard, #index-avatar {
    border-color: #32CD32;
}

.releasecard {
    background-color: #C0C0C0;
}

#footer, #footer a:link, #footer a:visited {
    color: #808080;
}

/* dark mode */
@media (prefers-color-scheme: dark) {
    body, #nav {
        background-color: #111111;
    }

    .show-comments {
        border-bottom-color: #7B68EE;
    }

    a:link, .show-comments {
        color: #7B68EE;
    }

    a:visited {
        color: #BA55D3;
    }

    .releasecard {
        background-color: #232323;
    }

    body, #nav, #nav a:link, #nav a:visited {
        color: #FFFFFF;
    }

    #footer, #footer a:link, #footer a:visited {
        color: #B0B0B0;
    }

    pre {
        background-color: #000000;
    }

    .commento-profile-button {
        fill: #FFFFFF;
    }

    #commento-textarea-root {
        color: #FFFFFF;
        background-color: #232323;
        border-color: #B0B0B0;
        border-width: 2px;
    }

    #commento-footer, .commento-markdown-button {
        display: none !important;
    }

    .commento-card {
        background-color: #232323 !important;
    }

    .commento-name, .commento-permalink, [id^=commento-comment-text] p {
        color: #FFFFFF !important;
    }
}

